tests/define/define_in_expression.token
[
    (
        Keyword(
            "(",
        ),
        0..1,
    ),
    (
        Keyword(
            "define",
        ),
        1..7,
    ),
    (
        Ident(
            "a",
        ),
        8..9,
    ),
    (
        Integer(
            3154,
        ),
        10..14,
    ),
    (
        Keyword(
            ")",
        ),
        14..15,
    ),
    (
        Keyword(
            "(",
        ),
        16..17,
    ),
    (
        Ident(
            "foo",
        ),
        17..20,
    ),
    (
        Keyword(
            "define",
        ),
        21..27,
    ),
    (
        Keyword(
            ")",
        ),
        27..28,
    ),
    (
        Ident(
            "bar",
        ),
        29..32,
    ),
    (
        Keyword(
            "define",
        ),
        33..39,
    ),
    (
        Ident(
            "foo",
        ),
        40..43,
    ),
]